--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -157,6 +157,9 @@ nav img {
     display: grid;
     grid-template-areas: "titleClient buttonClient" "cardClient cardClient";
   }
+  .main__client .main__client__title__one {
+    padding: 5.9rem 0.9rem 0.4rem 3.2rem;
+  }
   .main__client .main__client__button {
     align-content: flex-start;
   }
